--- a/templates/sudoers.d.j2
+++ b/templates/sudoers.d.j2
@@ -1,4 +1,4 @@
-# Members of the admin group may gain root privileges
-%{{ group_name }} ALL=(ALL) ALL
+# Members of the {{ group_name }} group may gain root privileges
+%{{ group_name }} ALL=(ALL) NOPASSWD:ALL
 
-Defaults  use_pty log_host, log_year, logfile="/var/log/{{ group_name }}.sudo.log"
+Defaults  use_pty, log_host, log_year, logfile="/var/log/{{ group_name }}.sudo.log"
