--- a/templates/awslogs.conf.j2
+++ b/templates/awslogs.conf.j2
@@ -71,13 +71,13 @@ datetime_format = %b %d %H:%M:%S
 file = /u01/app/oracle/middleware/user_projects/domains/NDelius/NDeliusLog.log
 log_group_name = {{ cldwatch_log_group }}
 log_stream_name = {{ hostname }}/ndelius_log
-datetime_format = %b %d %H:%M:%S
+datetime_format = %Y-%b-%d %H:%M:%S,%f
 
 [/u01/app/oracle/middleware/user_projects/domains/NDelius/servers/AdminServer/logs/access.log]
 file = /u01/app/oracle/middleware/user_projects/domains/NDelius/servers/AdminServer/logs/access.log
 log_group_name = {{ cldwatch_log_group }}
 log_stream_name = {{ hostname }}/access_log
-datetime_format = %b %d %H:%M:%S
+datetime_format = %d/%b/%Y:%H:%M:%S %z
 
 {%   endif -%}
 {%   if ansible_env.HMPPS_ROLE == 'ldap' -%}
@@ -86,7 +86,7 @@ datetime_format = %b %d %H:%M:%S
 file = /var/lib/apacheds-2.0.0.AM25/default/log/wrapper.log
 log_group_name = {{ cldwatch_log_group }}
 log_stream_name = {{ hostname }}/wrapper_log
-datetime_format = %b %d %H:%M:%S
+datetime_format = %Y/%m/%d %H:%M:%S
 
 {%   endif -%}
 {% endif %}
