--- a/templates/awslogs.conf.j2
+++ b/templates/awslogs.conf.j2
@@ -71,12 +71,12 @@ log_stream_name = {{ hostname }}/alfresco_log
 datetime_format = %b %d %H:%M:%S
 
 {%   endif -%}
-{%   if ansible_env.HMPPS_ROLE in ['ndelius', 'spg', 'interfaces'] -%}
+{%   if ansible_env.HMPPS_ROLE in ['ndelius', 'spg', 'interface'] -%}
 
 [/u01/app/oracle/middleware/user_projects/domains/NDelius/NDeliusLog.log]
 file = /u01/app/oracle/middleware/user_projects/domains/NDelius/NDeliusLog.log
 log_group_name = {{ cldwatch_log_group }}
-log_stream_name = {{ hostname }}/ndelius_log
+log_stream_name = {{ hostname }}/NDeliusLog_log
 datetime_format = %Y-%b-%d %H:%M:%S,%f
 
 [/u01/app/oracle/middleware/user_projects/domains/NDelius/servers/AdminServer/logs/access.log]
@@ -84,6 +84,27 @@ file = /u01/app/oracle/middleware/user_projects/domains/NDelius/servers/AdminSer
 log_group_name = {{ cldwatch_log_group }}
 log_stream_name = {{ hostname }}/access_log
 datetime_format = %d/%b/%Y:%H:%M:%S %z
+
+{%   endif -%}
+{%   if ansible_env.HMPPS_ROLE == 'spg' -%}
+
+[/u01/app/oracle/middleware/user_projects/domains/NDelius/activemq-log/activemq-broker.log]
+file = /u01/app/oracle/middleware/user_projects/domains/NDelius/activemq-log/activemq-broker.log
+log_group_name = {{ cldwatch_log_group }}
+log_stream_name = {{ hostname }}/activemq-broker_log
+datetime_format = %Y-%b-%d %H:%M:%S,%f
+
+[/u01/app/oracle/middleware/user_projects/domains/NDelius/activemq-log/activemq-ra.log]
+file = /u01/app/oracle/middleware/user_projects/domains/NDelius/activemq-log/activemq-ra.log
+log_group_name = {{ cldwatch_log_group }}
+log_stream_name = {{ hostname }}/activemq-ra_log
+datetime_format = %Y-%b-%d %H:%M:%S,%f
+
+[/u01/app/oracle/middleware/user_projects/domains/NDelius/activemq-log/ndelius-spg-bridge.log]
+file = /u01/app/oracle/middleware/user_projects/domains/NDelius/activemq-log/ndelius-spg-bridge.log
+log_group_name = {{ cldwatch_log_group }}
+log_stream_name = {{ hostname }}/ndelius-spg-bridge_log
+datetime_format = %Y-%b-%d %H:%M:%S,%f
 
 {%   endif -%}
 {%   if ansible_env.HMPPS_ROLE == 'ldap' -%}
