--- a/templates/update_users.sh.j2
+++ b/templates/update_users.sh.j2
@@ -20,6 +20,8 @@ cat << EOF > /tmp/playbook.yml
    - /tmp/users.yml
   roles:
      - users
+  gather_subset:
+     - min
 EOF
 
 ansible-galaxy install -r requirements.yml -f
